toList() .collect(Collectors.toList());