@@ -12,7 +12,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Repository
@@ -46,18 +45,18 @@ public class MemoryItemRepository implements ItemRepository {
         String  itemName = cond.getItemName();
         Integer maxPrice = cond.getMaxPrice();
 
-        return store.values().stream()
-                .filter(item -> {
-                    if(ObjectUtils.isEmpty(itemName)) {
-                        return true;
-                    }
-                    return item.getItemName().contains(itemName);
-                }).filter(item -> {
-                    if(maxPrice == null) {
-                        return true;
-                    }
-                    return item.getPrice() <= maxPrice;
-                }).collect(Collectors.toList());
+        return store.values().stream().filter(item -> {
+            if(ObjectUtils.isEmpty(itemName)) {
+                return true;
+            }
+            return item.getItemName().contains(itemName);
+        }).filter(item -> {
+            if(maxPrice == null) {
+                return true;
+            }
+            return item.getPrice() <= maxPrice;
+        }).toList();
+        //                .collect(Collectors.toList());
     }
 
 
